perf: signature-polymorphic FFI
Performance work landed since the last commit (7ced5fb), now winning
8/8 head-to-head metrics against tmducken 0.10.1-01 on JDK 25:

  Workload | INSERT       | QUERY
  ---------|--------------|--------------
  Numeric  | +10.7% *     | +54.9% *
  String   | +36.2% *     | +26.1% *
  UUID     | +33.4% *     | +35.4% *
  Mixed    | +30.4% *     | +21.2%  (CI overlaps; trim mean +23.3%)

  (* = statistically significant at 95% CI, mean of 20-30 samples,
       1M rows, interleaved alternation, no GC between samples)

Highlights:

* FFI signature-polymorphic dispatch via MethodHandleProxies +
  explicitCastArguments. The old invokeWithArguments path allocated
  a confined Arena per FFI call (32% of CPU in Panama abi machinery,
  22% in malloc); now FFI calls compile to direct interface dispatch
  with no boxing. 106ns -> 16ns per call (6.8x).

* JDK 25 upgrade (flake.nix). pkgs.clojure is overridden to be built
  against jdk25 (default Nix clojure pins to JDK 21).

* UUID write fast path: fill a JVM long[] then bulk-copy to native
  memory via MemorySegment.copy. Removes the per-row pgroups overhead
  that dominated small-row writes.

* New benchmark harness (dev/tmducken_comparison.clj):
  - Sample-level interleaved alternation (each sample times one lib,
    alternating per sample). No per-sample GC (avoids cold-cache
    artifacts; lets memory pressure naturalize like criterium does).
  - Statistics: arithmetic mean +/- 95% CI, 10%-trimmed mean,
    percentiles (p10/p25/p50/p75/p90/p95), RSD%.
  - Significance flag based on 95%-CI overlap.
  - No more min-based comparisons -- they capture lucky outliers
    and hide typical performance.

* Read-path instrumentation infrastructure in src/ducktape/core.clj.
  Toggleable via *instrument-stats* dynamic var (nil by default,
  single var-deref + nil-check overhead when off). Tracks per-phase
  ns timings (fetch, validity, buffer-build, clone-cpu, deref-wait,
  concat) plus chunk/column/clon